--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -4,7 +4,6 @@ import java.text.SimpleDateFormat
 // build.gradle in FtcRobotController
 //
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 android {
 
@@ -18,15 +17,12 @@ android {
     buildFeatures {
         buildConfig = true
     }
-    compileSdk 34
 
+    compileSdkVersion 30
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
     }
     namespace = 'com.qualcomm.ftcrobotcontroller'
 }
