--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,13 @@
  */
 
 buildscript {
-
-    ext.kotlin_version = '2.2.20'
-
     repositories {
         mavenCentral()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.10.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Note for FTC Teams: Do not modify this yourself.
+        classpath 'com.android.tools.build:gradle:8.7.0'
     }
 }
 
